# se-toolkit-lab-8

./: AGENTS.md  LICENSE  README.md  REPORT.md  docker-compose.yml  pyproject.toml  tmp_cron_jobs.json  tmp_fix_compose.py
.qwen/: settings.json
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot-websocket-channel/client-web-flutter/lib/: chat_screen.dart  llm_service.dart
nanobot/workspace/: HEARTBEAT.md
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
